--- a/src/component/services/Services.css
+++ b/src/component/services/Services.css
@@ -41,7 +41,7 @@
 
 
 .cardItem:hover{
-    background-color: #22223b;
+    background-color: #9A8C98;
     color: white;
     box-shadow: 0 4px 8px 0 rgba(7, 199, 247, 0.2), 0 6px 20px 0 rgba(3, 167, 243, 0.19);
   
