--- a/src/component/services/Services.css
+++ b/src/component/services/Services.css
@@ -46,3 +46,73 @@
     box-shadow: 0 4px 8px 0 rgba(7, 199, 247, 0.2), 0 6px 20px 0 rgba(3, 167, 243, 0.19);
   
 }
+
+@media screen and (max-width:600px){
+    .serviceHead{
+        font-size: 22px;
+    }
+}
+
+
+
+
+
+/* ==================================== */
+.container2{
+    margin: 2%;
+    padding: 2%;
+
+}
+
+.gst{
+    text-align: center;
+    background-color: #f7f7f7;
+    padding: 2%;
+}
+
+.services-h3{
+    font-weight: 500;
+}
+
+.services-p{
+    padding: 2%;
+}
+
+.services-gst-list-ul1{
+    list-style: none ;
+    text-align: left;
+    padding: 0;
+    margin: 0;    
+}
+.services-gst-list-ul2{
+    list-style: none ;
+    text-align: left;
+    padding: 0;
+    margin: 0;
+}
+.services-gst-h6{
+    text-align: left;
+    font-weight: 700;
+}
+
+/* ========================= */
+
+.company-registration{
+    text-align: center;
+}
+.services-cr-h6{
+    font-weight: 700;
+}
+.services-cr-list-ul{
+    list-style: none;
+    padding: 0;
+    margin: 0;
+}
+
+
+
+.trademark-registration{
+    background-color: #f7f7f7;
+    text-align: center;
+    padding: 2%;
+}
