--- a/src/component/navbar/Nav.css
+++ b/src/component/navbar/Nav.css
@@ -1,13 +1,22 @@
+.news-scroll{
+    height: 2%;
+    line-height: 26px;
+    font-weight: 400;
+    letter-spacing: 1px;
+}
+
+
+
 .navbar{
     display: flex;
     padding: 35px 55px 0px;
 }
 
 .logo{
-    width: 130px;
-    margin-top: -42%;
-    margin-bottom: -32%;
-    margin-left: -2%;
+    width: 85px;
+    margin-top: -48%;
+    margin-bottom: -16%;
+    margin-left: -16%;
     height: auto;
 }
 .nav-items{
@@ -54,7 +63,7 @@ a.active,.nav-links:hover{
 
 @media screen and (max-width:600px){
     .logo{
-        width: 108px;
+        width: 75px;
         margin-top: -42%;
         margin-bottom: -32%;
         margin-left: -64%;
