--- a/src/component/services/Services.css
+++ b/src/component/services/Services.css
@@ -61,7 +61,9 @@
 .container2{
     margin: 2%;
     padding: 2%;
-
+    line-height: 26px;
+    font-weight: 400;
+    letter-spacing: 1px;
 }
 
 .gst{
@@ -109,10 +111,28 @@
     margin: 0;
 }
 
-
+/* ======================================== */
 
 .trademark-registration{
     background-color: #f7f7f7;
     text-align: center;
     padding: 2%;
+}
+
+
+
+
+/* ==================================== */
+.loan-projects{
+    text-align: center;
+}
+
+.services-lp-h6{
+    font-weight: 700;
+}
+
+.srvices-lp-list-ul{
+    list-style: none;
+    padding: 0;
+    margin: 0;
 }
