--- a/src/component/Account/Login.css
+++ b/src/component/Account/Login.css
@@ -8,3 +8,24 @@
       max-width: 320px;
     }
   }
+
+.dashboard{
+  padding: 5% 0% 4% 25%;
+}
+#dashboard-h6{
+  display: inline;
+}
+.dashboard-img{
+  width: 50%;
+  padding: 5% 0% 5% 0%;
+}
+.dashboard-img-single{
+  padding: 2%;
+}
+.dashboard-img-button{
+  border:"0px";
+  margin:"10px";
+  position: relative;
+  right: -592px;
+  top: -67px;
+}
